Updated demo files

--- a/demo_uc1.ipynb
+++ b/demo_uc1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,55 +61,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Song paths for ease of working\n",
+    "# International Pop\n",
+    "# Taylor Swift | I Knew You Were Trouble. | Red\n",
+    "test_1 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/72jCZdH0Lhg93z6Z4hBjgj.mp3'\n",
     "\n",
-    "# ZAYN - Still Got Time\n",
-    "song_1 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/000xQL6tZNLJzIrtIgxqSl.mp3'\n",
-    "# Sean Turk - Middle\n",
-    "song_2 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/0032P9X3AD4AQvN7yzpmTo.mp3'\n",
-    "# \n",
-    "song_3 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/004XT7kCZUEJkVIZjmBdDi.mp3'\n",
-    "#\n",
-    "song_4 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/004skCQeDn1iLntSom0rRr.mp3'\n",
-    "#\n",
-    "song_5 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/005X0FmdtkM1kiutosXLTR.mp3'\n",
-    "#\n",
-    "song_6 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/007ogFejDqJKzEXDUDF8Nf.mp3'\n",
-    "#\n",
-    "song_7 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/00AvOVhsUi1gOCnHxTFw7i.mp3'\n",
-    "#\n",
-    "song_8 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/00AxNl4D4jHL2AEf1W55j5.mp3'\n",
-    "#\n",
-    "song_9 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/00BTDWR6xCaGdst6cPKkpF.mp3'\n",
-    "#\n",
-    "song_10 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/00Ci0EXS4fNPnkTbS6wkOh.mp3'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# From test_subset\n",
+    "# Folk Rock / Alternative Rock\n",
+    "# Mumford & Sons | White Blank Page | Sigh No More\n",
+    "test_2 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/14rApQTKycs9gNg7hjm9m7.mp3'\n",
     "\n",
-    "# Con Bro Chill - Dance Thief\n",
-    "test_1 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/test_subset/00AVE5t5MUtyGJf51V1GJG.mp3'\n",
+    "# Electronic\n",
+    "# Skrillex | Scary Monsters And Nice Sprites - Noisia Remix | Scary Monsters and Nice Sprites\n",
+    "test_3 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/5bPokvOlgW9dRySVnVmyJ9.mp3'\n",
     "\n",
-    "# Fantasia - Ain't Gon' Beg You\n",
-    "test_2 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/test_subset/02wVmJecRUCtkppST87OLx.mp3'\n",
-    "\n",
-    "# swim good now - Since U Asked\n",
-    "test_3 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/test_subset/0Axtkw6bMF4V4HMoKd5C2g.mp3'\n",
-    "\n",
-    "# Halsey - Tokyo Narita Freestyle\n",
+    "# Hip Hop\n",
     "test_4 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/test_subset/0W182mlOojwvO1HoXPkHXY.mp3'\n",
     "\n",
-    "# Original Broadway Cast Orchestra - I'll Never Be Jealous Again [The Pajama Game]\n",
-    "test_5 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/test_subset/0qCT5x6NI9wSea0weWPjbI.mp3'\n",
-    "\n",
-    "# Fatboy Slim - Praise You Radio Edit\n",
-    "test_6 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/test_subset/2tn9zXqIZJbgL1swqwOktz.mp3'\n"
+    "# Instrumental music (classical piano)\n",
+    "# Claude Debussy | Deux Arabesques: No. 1 in E major | Debussy: Suite Bergamasque - Prelude \"La Cathedral\" - Children's Corner - Arabesques\n",
+    "test_5 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/2ZH9p71UAdCUUH1LTSkwum.mp3'\n"
    ]
   },
   {
@@ -156,32 +125,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use this cell to listen to the audios, if needed\n",
+    "# Use this cell to listen to the audios\n",
     "\n",
     "# Call the function with the placeholder paths\n",
     "play_mp3_files(mp3_file_paths)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
