usecase3 demo file, track lists

--- a/demo_uc1.ipynb
+++ b/demo_uc1.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import json\n",
     "import subprocess\n",
     "import uuid\n",
     "import IPython.display as ipd\n",
@@ -15,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,17 +43,27 @@
     "        print(f\"{artist} | {title} | {album}\")\n",
     "        display(ipd.Audio(path))\n",
     "\n",
-    "# Function to display the songs selected\n",
-    "def print_playlist_songnames(file_paths):\n",
-    "    n = 1\n",
+    "# Function to display the songs selected and create a json using which audio can be played\n",
+    "def print_playlist_songnames(file_paths, filename):\n",
+    "    json_for_audio_playback = []\n",
+    "    n=1\n",
     "    for path in file_paths:\n",
     "        track_id = os.path.splitext(os.path.basename(path))[0]\n",
     "        track_info = get_track_info(f'spotify:track:{track_id}')\n",
+    "        track_json = {}\n",
     "        artist = track_info['artist']\n",
     "        title = track_info['title']\n",
     "        album = track_info['album']\n",
-    "        print(f\"{n}. {artist} | {title} | {album}\")\n",
-    "        n += 1"
+    "        track_json['sequence'] = n\n",
+    "        track_json['title'] = title\n",
+    "        track_json['artist'] = artist\n",
+    "        track_json['album'] = album\n",
+    "        track_json['audio_filepath'] = path\n",
+    "        print(f\"{artist} | {title} | {album}\")\n",
+    "        json_for_audio_playback.append(track_json)\n",
+    "        n+=1\n",
+    "    with open(f'{filename}.json', 'w') as file:\n",
+    "        json.dump(json_for_audio_playback, file, indent=4)"
    ]
   },
   {
@@ -61,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# International Pop\n",
+    "# Pop\n",
     "# Taylor Swift | I Knew You Were Trouble. | Red\n",
     "test_1 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/72jCZdH0Lhg93z6Z4hBjgj.mp3'\n",
     "\n",
@@ -74,11 +85,12 @@
     "test_3 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/5bPokvOlgW9dRySVnVmyJ9.mp3'\n",
     "\n",
     "# Hip Hop\n",
-    "test_4 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/test_subset/0W182mlOojwvO1HoXPkHXY.mp3'\n",
+    "# Sage The Gemini | Don't You | Remember Me\n",
+    "test_4 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/test_subset/4FOv3s8nyCctxcgstQwtFj.mp3'\n",
     "\n",
-    "# Instrumental music (classical piano)\n",
-    "# Claude Debussy | Deux Arabesques: No. 1 in E major | Debussy: Suite Bergamasque - Prelude \"La Cathedral\" - Children's Corner - Arabesques\n",
-    "test_5 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/2ZH9p71UAdCUUH1LTSkwum.mp3'\n"
+    "# Instrumental music (piano and cello)\n",
+    "# The Piano Guys | Bring Him Home | The Piano Guys\n",
+    "test_5 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/test_subset/2N6I3slzcRXW7pUw2x30qL.mp3'\n"
    ]
   },
   {
@@ -95,7 +107,7 @@
     "# Additional parameters, if needed\n",
     "num_songs = '10'  # Number of songs in the playlist\n",
     "noise = '0'   # Amount of noise in the playlist (default 0)\n",
-    "lookback = '3' # Amount of lookback in the playlist (default 3)\n",
+    "lookback = '4' # Amount of lookback in the playlist (default 3)\n",
     "\n",
     "# Path to Python script\n",
     "script = 'Deej-A.I.py'\n",
@@ -116,7 +128,7 @@
     "\n",
     "# Read the .m3u file and get the MP3 file paths\n",
     "mp3_file_paths = read_m3u(m3u_file_path)\n",
-    "print_playlist_songnames(mp3_file_paths)"
+    "print_playlist_songnames(mp3_file_paths, os.path.splitext(m3u_file_path)[0])"
    ]
   },
   {
@@ -128,8 +140,16 @@
     "# Use this cell to listen to the audios\n",
     "\n",
     "# Call the function with the placeholder paths\n",
+    "mp3_file_paths = read_m3u(m3u_file_path)\n",
     "play_mp3_files(mp3_file_paths)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
