--- a/demo_uc3.ipynb
+++ b/demo_uc3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,17 +31,6 @@
     "                mp3_file_paths.append(line.strip())\n",
     "\n",
     "    return mp3_file_paths\n",
-    "\n",
-    "# Function to create and display an audio player for each MP3 file\n",
-    "# def play_mp3_files(file_paths):\n",
-    "#     for path in file_paths:\n",
-    "#         track_id = os.path.splitext(os.path.basename(path))[0]\n",
-    "#         track_info = get_track_info(f'spotify:track:{track_id}')\n",
-    "#         artist = track_info['artist']\n",
-    "#         title = track_info['title']\n",
-    "#         album = track_info['album']\n",
-    "#         print(f\"{artist} | {title} | {album}\")\n",
-    "#         display(Audio(path, rate=None))\n",
     "\n",
     "# Function to display the songs selected and create a json using which audio can be played\n",
     "def print_playlist_songnames(file_paths, filename):\n",
@@ -72,22 +61,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sample input files defined\n",
+    "# Sample input\n",
     "\n",
-    "# Hip-hop\n",
-    "# T-Pain | Bartender | Epiphany\n",
-    "# Lil Wayne | Believe Me | Believe Me\n",
-    "# Sage The Gemini | Don't You | Remember Me\n",
-    "# NISSIM | A Million Years | Lemala\n",
-    "# Lil Durk | Money Walk | Lil Durk 2X\n",
-    "tf_1 = 'tracks_1.txt'\n",
+    "# Warmup: Imagine Dragons | I Don’t Know Why | Evolve\n",
+    "# Workout: Prince Royce | Already Missing You | Soy el Mismo\n",
+    "# Cooldown: Ed Sheeran | English Rose | x\n",
     "\n",
-    "# Pop\n",
-    "# José González | Teardrop | In Our Nature\n",
-    "# Swim Season | Flicker | Cascades\n",
-    "# Hilary Duff | Beat Of My Heart | Most Wanted\n",
-    "# The Vamps | Hurricane | Meet The Vamps\n",
-    "tf_2 = 'tracks_2.txt'"
+    "tf_3 = 'tracks_3.txt'"
    ]
   },
   {
@@ -98,10 +78,10 @@
    "source": [
     "# USE CASE 2:= Starting from a set of songs\n",
     "\n",
-    "input_tracks_file = tf_2\n",
+    "input_tracks_file = tf_3\n",
     "\n",
     "# Additional parameters, if needed\n",
-    "n = '5'  # Number of songs between each song in input_tracks_file\n",
+    "n = '15'  # Number of songs between each song in input_tracks_file\n",
     "randomness = '0'   # Degree of randomness in the playlist (default 0) [0-1]\n",
     "\n",
     "output_playlist_file = str(uuid.uuid4()) + '.m3u'\n",
@@ -128,15 +108,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.8.13"
   }
  },
