updated demo files

--- a/demo_uc1.ipynb
+++ b/demo_uc1.ipynb
@@ -32,17 +32,6 @@
     "\n",
     "    return mp3_file_paths\n",
     "\n",
-    "# Function to create and display an audio player for each MP3 file\n",
-    "def play_mp3_files(file_paths):\n",
-    "    for path in file_paths:\n",
-    "        track_id = os.path.splitext(os.path.basename(path))[0]\n",
-    "        track_info = get_track_info(f'spotify:track:{track_id}')\n",
-    "        artist = track_info['artist']\n",
-    "        title = track_info['title']\n",
-    "        album = track_info['album']\n",
-    "        print(f\"{artist} | {title} | {album}\")\n",
-    "        display(ipd.Audio(path))\n",
-    "\n",
     "# Function to display the songs selected and create a json using which audio can be played\n",
     "def print_playlist_songnames(file_paths, filename):\n",
     "    json_for_audio_playback = []\n",
@@ -58,7 +47,7 @@
     "        track_json['title'] = title\n",
     "        track_json['artist'] = artist\n",
     "        track_json['album'] = album\n",
-    "        track_json['audio_filepath'] = path\n",
+    "        track_json['audio_filepath'] = f'http://192.168.0.156:8000/{track_id}.mp3'\n",
     "        print(f\"{artist} | {title} | {album}\")\n",
     "        json_for_audio_playback.append(track_json)\n",
     "        n+=1\n",
@@ -85,12 +74,12 @@
     "test_3 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/5bPokvOlgW9dRySVnVmyJ9.mp3'\n",
     "\n",
     "# Hip Hop\n",
-    "# Sage The Gemini | Don't You | Remember Me\n",
-    "test_4 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/test_subset/4FOv3s8nyCctxcgstQwtFj.mp3'\n",
+    "# Lil Wayne | Believe Me | Believe Me\n",
+    "test_4 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/6t2eIONH4Sax3R21QWiKNp.mp3'\n",
     "\n",
-    "# Instrumental music (piano and cello)\n",
-    "# The Piano Guys | Bring Him Home | The Piano Guys\n",
-    "test_5 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/test_subset/2N6I3slzcRXW7pUw2x30qL.mp3'\n"
+    "# Instrumental (western classical)\n",
+    "# Erik Satie | Douze petits chorals: Choral No. 11 | Erik Satie\n",
+    "test_5 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/3Eem3JXrDvyKc9ikXijukv.mp3'\n"
    ]
   },
   {
@@ -102,7 +91,7 @@
     "# USE CASE 1:= Starting from a single seed song\n",
     "\n",
     "# Choose parameters and song\n",
-    "input_file = test_5\n",
+    "input_file = test_1\n",
     "\n",
     "# Additional parameters, if needed\n",
     "num_songs = '10'  # Number of songs in the playlist\n",
@@ -117,7 +106,7 @@
     "output_file = str(uuid.uuid4()) + '.m3u'\n",
     "\n",
     "# Construct the command as a list\n",
-    "command = ['python', script, 'Pickles_test', mp3tovec, '--playlist', output_file,\n",
+    "command = ['python', script, 'Pickles', mp3tovec, '--playlist', output_file,\n",
     "           '--nsongs', num_songs, '--noise', noise, '--lookback', lookback,\n",
     "           '--inputsong', input_file]\n",
     "\n",
@@ -129,19 +118,6 @@
     "# Read the .m3u file and get the MP3 file paths\n",
     "mp3_file_paths = read_m3u(m3u_file_path)\n",
     "print_playlist_songnames(mp3_file_paths, os.path.splitext(m3u_file_path)[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use this cell to listen to the audios\n",
-    "\n",
-    "# Call the function with the placeholder paths\n",
-    "mp3_file_paths = read_m3u(m3u_file_path)\n",
-    "play_mp3_files(mp3_file_paths)"
    ]
   },
   {
