--- a/demo_uc2.ipynb
+++ b/demo_uc2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,17 +31,6 @@
     "                mp3_file_paths.append(line.strip())\n",
     "\n",
     "    return mp3_file_paths\n",
-    "\n",
-    "# Function to create and display an audio player for each MP3 file\n",
-    "# def play_mp3_files(file_paths):\n",
-    "#     for path in file_paths:\n",
-    "#         track_id = os.path.splitext(os.path.basename(path))[0]\n",
-    "#         track_info = get_track_info(f'spotify:track:{track_id}')\n",
-    "#         artist = track_info['artist']\n",
-    "#         title = track_info['title']\n",
-    "#         album = track_info['album']\n",
-    "#         print(f\"{artist} | {title} | {album}\")\n",
-    "#         display(Audio(path, rate=None))\n",
     "\n",
     "# Function to display the songs selected and create a json using which audio can be played\n",
     "def print_playlist_songnames(file_paths, filename):\n",
@@ -58,7 +47,7 @@
     "        track_json['title'] = title\n",
     "        track_json['artist'] = artist\n",
     "        track_json['album'] = album\n",
-    "        track_json['audio_filepath'] = path\n",
+    "        track_json['audio_filepath'] = f'http://192.168.0.156:8000/{track_id}.mp3'\n",
     "        print(f\"{artist} | {title} | {album}\")\n",
     "        json_for_audio_playback.append(track_json)\n",
     "        n+=1\n",
@@ -98,15 +87,15 @@
    "source": [
     "# USE CASE 2:= Starting from a set of songs\n",
     "\n",
-    "input_tracks_file = tf_2\n",
+    "input_tracks_file = tf_1\n",
     "\n",
     "# Additional parameters, if needed\n",
-    "n = '5'  # Number of songs between each song in input_tracks_file\n",
+    "n = '8'  # Number of songs between each song in input_tracks_file\n",
     "randomness = '0'   # Degree of randomness in the playlist (default 0) [0-1]\n",
     "\n",
     "output_playlist_file = str(uuid.uuid4()) + '.m3u'\n",
     "script_2 = 'Join_the_dots.py'\n",
-    "mp3tovec_2 = 'Pickles_test/mp3tovecs/mp3tovec.p'\n",
+    "mp3tovec_2 = 'Pickles/mp3tovecs/mp3tovec.p'\n",
     "\n",
     "# Construct the command as a list\n",
     "command_3 = ['python', script_2, mp3tovec_2, '--noise', randomness,\n",
@@ -117,8 +106,16 @@
     "\n",
     "# Read the .m3u file and get the MP3 file paths\n",
     "mp3_file_paths = read_m3u(output_playlist_file)\n",
+    "print(output_playlist_file)\n",
     "print_playlist_songnames(mp3_file_paths, os.path.splitext(output_playlist_file)[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
