--- a/demo_uc3.ipynb
+++ b/demo_uc3.ipynb
@@ -47,7 +47,7 @@
     "        track_json['title'] = title\n",
     "        track_json['artist'] = artist\n",
     "        track_json['album'] = album\n",
-    "        track_json['audio_filepath'] = path\n",
+    "        track_json['audio_filepath'] = f'http://192.168.0.156:8000/{track_id}.mp3'\n",
     "        print(f\"{artist} | {title} | {album}\")\n",
     "        json_for_audio_playback.append(track_json)\n",
     "        n+=1\n",
@@ -76,17 +76,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# USE CASE 2:= Starting from a set of songs\n",
+    "# USE CASE 3:= Creating a pathway between some selected songs\n",
     "\n",
     "input_tracks_file = tf_3\n",
     "\n",
     "# Additional parameters, if needed\n",
-    "n = '15'  # Number of songs between each song in input_tracks_file\n",
+    "n = '10'  # Number of songs between each song in input_tracks_file\n",
     "randomness = '0'   # Degree of randomness in the playlist (default 0) [0-1]\n",
     "\n",
     "output_playlist_file = str(uuid.uuid4()) + '.m3u'\n",
     "script_2 = 'Join_the_dots.py'\n",
-    "mp3tovec_2 = 'Pickles_test/mp3tovecs/mp3tovec.p'\n",
+    "mp3tovec_2 = 'Pickles/mp3tovecs/mp3tovec.p'\n",
     "\n",
     "# Construct the command as a list\n",
     "command_3 = ['python', script_2, mp3tovec_2, '--noise', randomness,\n",
@@ -97,8 +97,16 @@
     "\n",
     "# Read the .m3u file and get the MP3 file paths\n",
     "mp3_file_paths = read_m3u(output_playlist_file)\n",
+    "print(output_playlist_file)\n",
     "print_playlist_songnames(mp3_file_paths, os.path.splitext(output_playlist_file)[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -108,7 +116,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.13"
   }
  },
